# kubeventsd

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.example.yaml
.cargo/: audit.toml
.github/workflows/: ci.yaml  publish-docker.yaml  security-audit.yaml
chart/: Chart.yaml  values.yaml
chart/templates/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  config.yaml  deployment.yaml  secret.yaml  serviceaccount.yaml
src/: filter.rs  main.rs  rule.rs  rules.rs
src/config/: file.rs  mod.rs
src/events/: ext.rs  mod.rs
src/notifiers/: matrix.rs  mod.rs  webhook.rs
src/senders/: matrix.rs  mod.rs  webhook.rs
